<resources>
    <string name="app_name">NY Times</string>
    <string name="preview">PREVIEW</string>
    <string name="enter_email_address">Enter e-mail</string>
    <string name="email">EMAIL</string>
    <string name="Subject">Hello, Android Academy MSK!</string>
    <string name="email_to">mail@gmaidal.com</string>
    <string name="are_you_want">Send Email?</string>
    <string name="no_apps_email">Email app not found</string>
    <string name="no_apps_browser">Browser app not found</string>
    <string name="descript_photo">Photo</string>
    <string name="btn_send">Send Message</string>
    <string name="descr_logo">logo</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="text_description">Я начал заниматься Android разработкой с 2016 года. Закончил курс Skill-Branch. Имею несколько тестовых проектов на GitHub аккаунте. На данный момент прохожу курс Android Academy</string>
    <string name="junior_android_developer">Junior Android Developer</string>
    <string name="ex_worker_vtb_bank">Ex-worker VTB Bank</string>
    <string name="student_android_academy">Student Android Academy</string>
    <string name="disclaimer">© 2018 Evgeniy Kamyshnikov</string>
    <string name="menu_action_switch">Switch</string>
    <string name="telegram">https://t.me/EvgeniyKam</string>
    <string name="vk">https://vk.com/id270708</string>
    <string name="github">https://github.com/jonart</string>
    <string name="internet_connection">Internet is not available</string>
    <string name="welcome">Welcome!</string>
    <string name="retry">retry</string>


    <string name="category_home">Home</string>
    <string name="category_opinion">Opinion</string>
    <string name="category_world">World</string>
    <string name="category_national">National</string>
    <string name="category_politics">Politics</string>
    <string name="category_upshot">Upshot</string>
    <string name="category_nyregion">NY region</string>
    <string name="category_business">Business</string>
    <string name="category_technology">Technology</string>
    <string name="category_science">Science</string>
    <string name="category_health">Health</string>
    <string name="category_sports">Sports</string>
    <string name="category_arts">Arts</string>
    <string name="category_books">Books</string>
    <string name="category_movies">Movies</string>
    <string name="category_theater">Theater</string>
    <string name="category_sundayreview">Sunday review</string>
    <string name="category_fashion">Fashion</string>
    <string name="category_tmagazine">T-magazine</string>
    <string name="category_food">Food</string>
    <string name="category_travel">Travel</string>
    <string name="category_magazine">Magazine</string>
    <string name="category_realestate">Real estate</string>
    <string name="category_automobiles">Automobiles</string>
    <string name="category_obituaries">Obituaries</string>
    <string name="category_insider">Insider</string>
    <string name="delete">Удалить</string>
    <string name="email_send">jonart2008@gmail.com</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>

    <array name="category_array">
        <item name="category_home">Home</item>
        <item name="category_opinion">Opinion</item>
        <item name="category_world">World</item>
        <item name="category_national">National</item>
        <item name="category_politics">Politics</item>
        <item name="category_upshot">Upshot</item>
        <item name="category_nyregion">NY region</item>
        <item name="category_business">Business</item>
        <item name="category_technology">Technology</item>
        <item name="category_science">Science</item>
        <item name="category_health">Health</item>
        <item name="category_sports">Sports</item>
        <item name="category_arts">Arts</item>
        <item name="category_books">Books</item>
        <item name="category_movies">Movies</item>
        <item name="category_theater">Theater</item>
        <item name="category_sundayreview">Sunday review</item>
        <item name="category_fashion">Fashion</item>
        <item name="category_tmagazine">T-magazine</item>
        <item name="category_food">Food</item>
        <item name="category_travel">Travel</item>
        <item name="category_magazine">Magazine</item>
        <item name="category_realestate">Real estate</item>
        <item name="category_automobiles">Automobiles</item>
        <item name="category_obituaries">Obituaries</item>
        <item name="category_insider">Insider</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
