<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        tools2:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descr_logo"
            android:src="@drawable/ic_android_black_24dp" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/tv_settings"
            android:text="@string/student_android_academy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        tools2:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_workplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descr_logo"
            android:src="@drawable/vtb" />

        <TextView
            android:id="@+id/tv_workplace"
            style="@style/tv_settings"
            android:text="@string/ex_worker_vtb_bank" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        tools2:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_dev_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descr_logo"
            android:src="@drawable/ic_android_black_24dp" />

        <TextView
            android:id="@+id/tv_dev_status"
            style="@style/tv_settings"
            android:text="@string/junior_android_developer" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter a message"
        android:hint="@string/enter_a_message"
        android:inputType="text"
        android:textSize="16sp"
        tools2:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_send_comment"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/btn_send"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_telegram"
            style="@style/iv_button"
            android:src="@drawable/ic_telegram_28dp" />

        <ImageButton
            android:id="@+id/ib_vk"
            style="@style/iv_button"
            android:src="@drawable/vk" />

        <ImageButton
            android:id="@+id/ib_github"
            style="@style/iv_button"
            android:src="@drawable/github" />
    </LinearLayout>

</LinearLayout>